:art: You know java 17, right?